Authentication and authorization feature implementation completed (Merged - new secret-key for JWT, updated JWT library (0.9 to 0.11), completed websecurity config for JWT)